<resources>
    <string name="app_name">Flash_Card</string>
    <string name="insert">Insert</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="enter_the_content">Enter the content</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_topic">Enter the topic</string>
    <string name="enter_the_sentence">Enter the sentence</string>
    <string name="topic">Topic</string>
    <string name="check_the_content">Check the content</string>
    <string name="check_the_sentence">Check the sentence</string>
    <string name="sentence">Sentence</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="manage">Manage</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="current_topic">Current Topic</string>
    <string name="new_topic">New Topic</string>
    <string name="apply">Apply</string>
    <string name="enter_the_new_topic">Enter the new topic name</string>
    <string name="current_title">Current Title</string>
    <string name="current_content">Current Content</string>
    <string name="current_sentence">Current Sentence</string>
    <string name="back">Back</string>
    <string name="import_text">Import</string>
    <string name="export">Export</string>
</resources>