<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insert_Activity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/topicTextView"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/topic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTextView"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/sentenceTextView"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/sentence"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicTextView"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/editTextTopic"
        android:layout_width="237dp"
        android:layout_height="56dp"
        android:layout_marginEnd="4dp"
        android:autofillHints="topic"
        android:ems="10"
        android:hint="@string/enter_the_topic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/topicTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextContent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/editTextSentence"
        android:layout_width="249dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:autofillHints="topic"
        android:ems="10"
        android:hint="@string/enter_the_sentence"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/sentenceTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTopic"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="240dp"
        android:layout_height="85dp"
        android:autofillHints="title"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_title"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/titleTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />


    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="240dp"
        android:layout_height="85dp"
        android:autofillHints="content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_content"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/contentTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentenceTextView"
        app:layout_constraintVertical_bias="0.618" />

    <Button
        android:id="@+id/insertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSentence"
        app:layout_constraintVertical_bias="0.57" />

</androidx.constraintlayout.widget.ConstraintLayout>