<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTopic_Activity">

    <TextView
        android:id="@+id/currentTopictextView"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="212dp"
        android:text="@string/current_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/currentTopiceditText"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTopictextView" />

    <TextView
        android:id="@+id/newTopictextView"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="72dp"
        android:text="@string/new_topic"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTopiceditText" />

    <EditText
        android:id="@+id/newTopiceditText"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:hint="@string/enter_the_new_topic"
        app:layout_constraintBottom_toTopOf="@+id/applyButtonEditTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTopictextView"
        app:layout_constraintVertical_bias="0.097" />

    <Button
        android:id="@+id/applyButtonEditTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>