<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContent_Activity">

    <TextView
        android:id="@+id/currentTitletextView"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="168dp"
        android:text="@string/current_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/currentTitleeditText"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTitletextView" />

    <TextView
        android:id="@+id/currentContenttextView"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:text="@string/current_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTitleeditText" />

    <EditText
        android:id="@+id/currentContenteditText"
        android:layout_width="299dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentContenttextView" />

    <TextView
        android:id="@+id/currentSentencetextView"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:layout_marginTop="56dp"
        android:text="@string/current_sentence"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentContenteditText" />


    <EditText
        android:id="@+id/currentSentenceeditText"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/applyButtonEditTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentSentencetextView"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/cancelButtonWithEditContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/applyButtonEditContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toEndOf="@+id/cancelButtonWithEditContent" />


</androidx.constraintlayout.widget.ConstraintLayout>